--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "dayjs-business-days": "^1.0.4",
     "dotenv": "^16.5.0",
+    "firebase": "^11.6.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
