--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "dayjs": "^1.11.13",
     "dayjs-business-days": "^1.0.4",
     "dotenv": "^16.5.0",
-    "firebase": "^11.6.1",
+    "firebase": "^11.7.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3"
   },
